--- a/Css/TheUnknownCss.css
+++ b/Css/TheUnknownCss.css
@@ -81,7 +81,7 @@
   
 .PatchNotes-Slide[data-active] {
     opacity: 1;
-    z-index: 1;
+    z-index: 2;
     transition-delay: 0ms;
 }
 
@@ -94,7 +94,7 @@
 
 .carousel-button {
     position: absolute;
-    z-index: 2;
+    z-index: 3;
     background: none;
     border: none;
     font-size: 4rem;
